fix : Java 17에 맞춰 수정
- JDK21 기준의 메서드였음